[tool.poetry]
name = "github-analytics"
version = "0.1.0"
description = ""
authors = ["bulatsabirow <bulatsabirow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["sqlalchemy"], version = "^0.110.0"}
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
